concord_examples/tests/ui/removed_auth_vars.rs
use concord_macros::api;

api! {
    client UiRemovedAuthVars {
        scheme: https,
        host: "example.com",
        auth_vars {
            token: String
        }
    }
}

fn main() {}
